# 2-side-bfs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: workflows.yml
.github/workflows/: ci.yml
examples/: graph.csv
include/: two_side_bfs.h
results/: plots.ipynb
scripts/: convert-csv-to-mtx.py  format.sh  get-graphblas.sh  style-check.sh
src/: main.c  two_side_bfs.c
